<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 points</string>
    <string name="_2_points">+2 points</string>
    <string name="free_throw">Free throw</string>
    <string name="team_a_score">0</string>
    <string name="reset">reset</string>
    <string name="team_b">Team B</string>
    <string name="team_b">Team B</string>
    <string name="tem_b_score">tem_b_score</string>
    <string name="team_b">Team B</string>
</resources>