<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:onClick="reset"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/team_a"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:textColor="#616161"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_1"
            android:layout_centerInParent="true"
            android:text="@string/team_a_score"
            android:layout_marginTop="16dp"
            android:textSize="56sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>

        <Button
            android:id="@+id/button_view_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_a_score"
            android:layout_centerInParent="true"
            android:onClick="addOneTeamA"
            android:text="@string/_3_points"
            android:textAllCaps="true"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <Button
            android:id="@+id/button_view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_view_1"
            android:layout_centerInParent="true"
            android:onClick="addTwoTeamA"
            android:text="@string/_2_points"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <Button
            android:id="@+id/button_view_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_view_2"
            android:layout_centerInParent="true"
            android:onClick="addThreeTeamA"
            android:text="@string/free_throw"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/text_view_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/team_b"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:textColor="#616161"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_a"
            android:layout_centerInParent="true"
            android:text="@string/team_a_score"
            android:layout_marginTop="16dp"
            android:textSize="56sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-light"/>

        <Button
            android:id="@+id/button_view_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_b_score"
            android:layout_centerInParent="true"
            android:onClick="addOneTeamB"
            android:text="@string/_3_points"
            android:textAllCaps="true"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <Button
            android:id="@+id/button_view_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_view_a"
            android:layout_centerInParent="true"
            android:onClick="addTwoTeamB"
            android:text="@string/_2_points"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <Button
            android:id="@+id/button_view_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_view_b"
            android:layout_centerInParent="true"
            android:onClick="addThreeTeamB"
            android:text="@string/free_throw"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

    </RelativeLayout>

</LinearLayout>

</RelativeLayout>
